recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if (steps!=0) {
		avance(length)
		gauche(angle)
		spirale(steps, angle, length, increment)
	}else{
		return
		
		
				
	}
	
	
}
	
 